@@ -485,7 +485,7 @@ public class STMLArray extends STMLElement implements HasUnits, HasArraySize,
 			ii = new int[ss.length];
 			for (int i = 0; i < ii.length; i++) {
 				try {
-					ii[i] = new Integer(ss[i]).intValue();
+					ii[i] = Integer.valueOf(ss[i]).intValue();
 				} catch (NumberFormatException nfe) {
 					throw new RuntimeException("Bad int (" + ss[i]
 							+ ") at position: " + i);
@@ -978,9 +978,9 @@ public class STMLArray extends STMLElement implements HasUnits, HasArraySize,
 		} else if (XSD_DATE.equals(dataType)) {
 			this.append(JodaDate.parseDate(content).toString());
 		} else if (XSD_DOUBLE.equals(dataType)) {
-			this.append(new Double(content).doubleValue());
+			this.append(Double.valueOf(content).doubleValue());
 		} else if (XSD_INTEGER.equals(dataType)) {
-			this.append(new Integer(content).intValue());
+			this.append(Integer.valueOf(content).intValue());
 		}
 	}
 
