@@ -296,8 +296,8 @@ public final class TestUtils implements STMLConstants {
 		Error ee = null;
 		try {
 			try {
-				testVal = new Double(testValue).doubleValue();
-				refVal = new Double(refValue).doubleValue();
+				testVal = Double.valueOf(testValue).doubleValue();
+				refVal = Double.valueOf(refValue).doubleValue();
 				Assert.assertEquals(message + " doubles ", refVal, testVal,
 								eps);
 			} catch (NumberFormatException e) {
